tika-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
      component: tika
  template:
    metadata:
      labels:
        app: paperless-ngx
        component: tika
    spec:
      containers:
      - name: tika
        image: docker.io/apache/tika:2.5.0
        ports:
        - name: http
          containerPort: 9998
          protocol: TCP
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
