gotenberg-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gotenberg
spec:
  selector:
    app: paperless-ngx
    component: gotenberg
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
