redis-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  selector:
    app: paperless-ngx
    component: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
