tika-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tika
spec:
  selector:
    app: paperless-ng
    component: tika
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
