ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`paperless-ngx.example.com`)"
      priority: 10
      middlewares:
        - name: redirect-to-https
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx-https
spec:
  tls:
    certResolver: letsencrypt
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`paperless-ngx.example.com`)"
      priority: 10
      services:
        - name: webserver
          port: http
